tests/baselines/reference/externSyntax.errors.txt
externSyntax.ts(8,20): error TS1183: An implementation cannot be declared in ambient contexts.


==== externSyntax.ts (1 errors) ====
    declare var v;
    declare namespace M {
        export class D {
            public p;
        }
        export class C {
            public f();
            public g() { } // error body
                       ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
        }
    }
    
    
    
    